refactor: get포스터